2010-06-16  Glenn Morris  <rgm@gnu.org>

	* editfns.c (Fbyte_to_string): Pacify compiler.

2010-06-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* lread.c (read1): Phase out old-style backquotes a bit more.

2010-06-12  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in ($(BLD)/bidi.$(O)): Depend on biditype.h and
	bidimirror.h.

	* deps.mk (bidi.o): Depend on biditype.h and bidimirror.h.

	* bidi.c (bidi_initialize): Remove explicit initialization of
	bidi_type_table; include biditype.h instead.  Don't support
	entries whose second codepoint is zero.  Initialize bidi_mirror_table.
	(bidi_mirror_char): Use bidi_mirror_table.

	* biditype.h: New file.

	* bidimirror.h: New file.

	* window.c (syms_of_window): Doc fix (bug#6409).

2010-06-12  Romain Francoise  <romain@orebokech.com>

	* Makefile.in (lisp, shortlisp): Use new location of vc-hooks and
	ediff-hook.

2010-06-10  Glenn Morris  <rgm@gnu.org>

	* editfns.c (Fbyte_to_string): Pacify compiler.

	* m/ibms390x.h: Rather than duplicating ibms390.h, just include it.

2010-06-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* dbusbind.c (xd_append_arg): Don't "make-unibyte" the string.
	Check `object's type before accessing its guts.

2010-06-09  Dan Nicolaescu  <dann@ics.uci.edu>

	* s/usg5-4.h: Fix previous change.
	Suggested by Lawrence Mitchell <wence@gmx.li>

2010-06-08  Andreas Schwab  <schwab@linux-m68k.org>

	* minibuf.c (Fall_completions): Add more checks.

2010-06-08  Juanma Barranquero  <lekktu@gmail.com>

	* minibuf.c (Fall_completions): Check COLLECTION's size (bug#6378).

2010-06-08  Dan Nicolaescu  <dann@ics.uci.edu>

	* lread.c (X_OK): Remove, unused.

	* dispnew.c: Remove obsolete comment.

	Remove INCLUDED_FCNTL.
	* xterm.c (INCLUDED_FCNTL):
	* callproc.c (INCLUDED_FCNTL):
	* alloc.c (INCLUDED_FCNTL):
	* systty.h (INCLUDED_FCNTL): Remove all uses, not needed anymore.
	(emacs_get_tty, emacs_set_tty): Declare unconditionally.

2010-06-07  Martin Rudalics  <rudalics@gmx.at>
